fixed padding so both btns are same on mobile

--- a/src/style/visualizations/main.sass
+++ b/src/style/visualizations/main.sass
@@ -110,7 +110,7 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
       align-items: center
 
       @media only screen and (max-width: 500px)
-        padding: 3px 3.5px
+        padding: 3px 4.5px
       
       @media only screen and (min-width: 501px)
         min-width: 124px
